--- a/GroundStation/src/main/resources/application.yaml
+++ b/GroundStation/src/main/resources/application.yaml
@@ -2,7 +2,13 @@ server:
   port: 80
 
 app:
-  logging-to: file
+  logging-to: console # option are: console / file
+  drone:
+    video-ws-endpoint: /videofeed
+    video-server-port: 1313
+   ###  importent - determine the number of drones that can connect (1 byte - 2^8 - 1 = 255 drones).
+   ##     its set to parse the x bytes of the recieved data package for the drone id. 
+    drone-id-length: 1 
 
   logging:
     level:
